--- a/templates/conventions/actions/delete.html
+++ b/templates/conventions/actions/delete.html
@@ -1,14 +1,14 @@
 <div class="fr-col-12 fr-col-lg-6">
     <div role="alert" class="fr-alert fr-alert--warning">
         <p class="fr-alert__title">
-            Suppression du projet de convention
+            Suppression du projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}
         </p>
         <p>
             Vous vous êtes trompé lors de la création ? Ce n'est pas la bonne opération ?
-            Vous pouvez supprimer le projet de convention, cela ne supprimera pas l'opération et vous pourrez la refaire plus tard.
+            Vous pouvez supprimer le projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}, cela ne supprimera pas l'opération et vous pourrez la refaire plus tard.
         </p>
         <button type="button" class="fr-btn apilos-btn--red fr-btn--icon-left fr-fi-delete-line  fr-my-1w" data-fr-opened="false" aria-controls="fr-modal-{{convention.uuid}}">
-            Supprimer cette convention
+            Supprimer {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %}
         </button>
     </div>
 </div>
@@ -23,15 +23,15 @@
                     <div class="fr-modal__content">
                         <h1 id="fr-modal-{{convention.uuid}}-title" class="fr-modal__title">
                             <span class="fr-fi-arrow-right-line fr-fi--lg"></span>
-                            {{ convention }}
+                            {{ convention }}{% if convention.is_avenant %} - Avenant{% endif %}
                         </h1>
-                        <p>Vous vous apprétez à supprimer la convention "{{convention}}", êtes-vous sur de vouloir supprimer cette convention ?</p>
+                        <p>Vous vous apprétez à supprimer {% if convention.is_avenant %}l'avenant à la convention{% else %}la convention{% endif %} "{{convention}}", êtes-vous sur de vouloir supprimer {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %} ?</p>
                     </div>
                     <div class="fr-modal__footer">
                         <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
                             <li>
                                 <button type="button" class="fr-btn fr-btn--icon-left fr-fi-delete-line" id='delete_{{convention.uuid}}'>
-                                    Supprimer la convention
+                                    Supprimer {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}
                                 </button>
                                 <script type="text/javascript" nonce="{{request.csp_nonce}}">
                                     document.addEventListener('DOMContentLoaded', function () {
