--- a/templates/conventions/sent.html
+++ b/templates/conventions/sent.html
@@ -1,8 +1,6 @@
 {% extends "layout/base.html" %}
 
-{% block page_title %}
-    {% if convention.display_options.display_progress_bar_3 %}Actions{% else %}Téléversement{% endif %} - APiLos
-{% endblock%}
+{% block page_title %} Téléversement - APiLos {% endblock%}
 
 {% load static %}
 
