--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -84,6 +84,12 @@
                                         {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='bailleur__nom' url_target='conventions:index' %}
                                     </th>
                                 {% endif %}
+                                {% if request|display_administration %}
+                                    <th scope="col" class="th_inline">
+                                        Instructeur
+                                        {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='programme__administration__nom' url_target='conventions:index' %}
+                                    </th>
+                                {% endif %}
                                 <th title="Numéro de décision" scope="col">
                                     Numéro
                                     {% include "common/table/display_order_icon.html" with order_by=conventions.order_by order_by_column='programme__numero_galion' url_target='conventions:index' %}
@@ -124,7 +130,10 @@
                                 <tr id="convention_redirect_{{convention.uuid}}" class="clickable {% if convention.display_options.display_redirect_sent %}sent{% elif convention.display_options.display_redirect_post_action %}signed{% endif %}">
 
                                     {% if request|is_instructeur %}
-                                        <td>{{convention.bailleur.nom}}</td>
+                                        <td>{{convention.bailleur}}</td>
+                                    {% endif %}
+                                    {% if request|display_administration %}
+                                        <td>{{convention.programme.administration}}</td>
                                     {% endif %}
                                     <td>{{convention.programme.numero_galion}}</td>
                                     <td>{{convention.programme.date_achevement_compile|date:"d/m/Y"|default_if_none:'-' }}</td>
