--- a/templates/conventions/avenant_annexes.html
+++ b/templates/conventions/avenant_annexes.html
@@ -26,8 +26,7 @@
                     <div class="fr-col-md-12">
 
                         <div role="alert" class="fr-alert fr-alert--info fr-mb-3w">
-                            <p class="fr-mb-3w">Attention, les annexes concernées sont ici les jardins, les caves et les surfaces de terrasse au-delà de 9 m² (ex : Pour une terrasse d’une surface totale de 10 m², renseignez ici uniquement 1 m², les 9m² sont intégrés dans le calcul de la surface utile)</p>
-                            <p>La déclaration des stationnements par type se fera à la prochaine étape</p>
+                            <p class="fr-mb-1w">Attention, les annexes concernées sont ici les jardins, les caves et les surfaces de terrasse au-delà de 9 m² (ex : Pour une terrasse d’une surface totale de 10 m², renseignez ici uniquement 1 m², les 9m² sont intégrés dans le calcul de la surface utile)</p>
                         </div>
 
                         <h4>Annexes associées aux logements exclues du calcul de la surface utile et pouvant donner lieu à un loyer accessoire</h4>
@@ -130,8 +129,8 @@
                 {% include "common/required_fields_info.html" %}
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
-                        {% include "common/button/next_and_save.html" with suivant='conventions:annexes' convention_uuid=convention.uuid editable=editable %}
-                        {% include "common/button/previous.html" with precedent='conventions:logements' convention_uuid=convention.uuid %}
+                        {% include "common/button/next_and_save.html" with suivant='conventions:avenant_annexes' convention_uuid=convention.uuid editable=editable %}
+                        {% include "common/button/previous.html" with precedent='conventions:avenant_logements' convention_uuid=convention.uuid %}
                     {% else %}
                         {% include "common/button/noteditable_button.html" with convention=convention %}
                     {% endif %}
