--- a/templates/conventions/avenant_comments.html
+++ b/templates/conventions/avenant_comments.html
@@ -37,8 +37,8 @@
 
                 <div class="form-button-footer fr-col-md-12 fr-py-5w">
                     {% if editable %}
-                        {% include "common/button/next_and_save.html" with suivant='conventions:comments' convention_uuid=convention.uuid editable=editable %}
-                        {% include "common/button/previous.html" with precedent='conventions:stationnements' convention_uuid=convention.uuid %}
+                        {% include "common/button/next_and_save.html" with suivant='conventions:avenant_comments' convention_uuid=convention.uuid editable=editable %}
+                        {% include "common/button/previous.html" with precedent='conventions:avenant_annexes' convention_uuid=convention.uuid %}
                     {% else %}
                         {% include "common/button/noteditable_button.html" with convention=convention %}
                     {% endif %}
