--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -412,204 +412,8 @@
                     </div>
                 </div>
 
-                <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-12 fr-col-lg-12">
-                        <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body fr-my-2w">
-                                <div class="block--row-strech" id="{{object_field}}_div">
-                                    <div class="block--row-strech-1">
-                                        <h4 class="fr-card__title">
-                                            Logements
-                                        </h4>
-                                    </div>
-                                    {% if convention.display_options.display_progress_bar_1 %}
-                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:logements' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                        </a>
-                                    {% endif %}
-                                </div>
-                                <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                                    <table>
-                                        <thead>
-                                            <tr>
-                                                {% if convention.display_options.display_comments %}
-                                                    {% include 'common/utils/comments_header.html' with object_name='logement' label='Logements' callback_click="refresh_opened_comments" %}
-                                                {% endif %}
-                                                <th scope="col" class="col__width--150">Désignation {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--120">Type {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--120">Surface habitable {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--120">Surface des annexes réelle {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--120">Surface des annexes retenue dans la SU {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--120">Surface Utile {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--120">Loyer maximum en € par m² de surface utile {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--120">Coefficient propre au logement {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--120">Loyer maximum du logement en € {% include "common/form/required_field_star.html" %}</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            {% for logement in logements %}
-                                                {% with logement_uuid=logement.uuid|slugify %}
-                                                    {% with main_object_field="logement__uuid__"|add:logement_uuid %}
-                                                        <tr id="{{main_object_field}}_group">
-                                                            {% if convention.display_options.display_comments %}
-                                                                <td id="{{main_object_field}}_div">
-                                                                    {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Logement" callback_click="refresh_opened_comments" %}
-                                                                </td>
-                                                            {% endif %}
-                                                            <td>
-                                                                {{ logement.designation }}
-                                                            </td>
-                                                            <td>
-                                                                {{ logement.typologie }}
-                                                            </td>
-                                                            <td id="lgt_sh">
-                                                                {{ logement.surface_habitable|floatformat:2 }}
-                                                            </td>
-                                                            <td id="lgt_sa">
-                                                                {{ logement.surface_annexes|floatformat:2 }}
-                                                            </td>
-                                                            <td id="lgt_sar">
-                                                                {{ logement.surface_annexes_retenue|floatformat:2 }}
-                                                            </td>
-                                                            <td id="lgt_su">
-                                                                {{ logement.surface_utile|floatformat:2 }}
-                                                            </td>
-                                                            <td>
-                                                                {{ logement.loyer_par_metre_carre|floatformat:2 }}
-                                                            </td>
-                                                            <td>
-                                                                {{ logement.coeficient|floatformat:4 }}
-                                                            </td>
-                                                            <td id="lgt_loyer">
-                                                                {{ logement.loyer|floatformat:2 }}
-                                                            </td>
-                                                        </tr>
-                                                    {% endwith %}
-                                                {% endwith %}
-                                            {% endfor %}
-                                            <tr>
-                                                <td colspan=" {% if convention.display_options.display_comments %}3{% else %}2{% endif %}" class="fr-text--lg">
-                                                    Total
-                                                </td>
-                                                <td id="total_sh" class="fr-text--lg">
-                                                </td>
-                                                <td id="total_sa" class="fr-text--lg">
-                                                </td>
-                                                <td id="total_sar" class="fr-text--lg">
-                                                </td>
-                                                <td id="total_su" class="fr-text--lg">
-                                                </td>
-                                                <td>
-                                                </td>
-                                                <td>
-                                                </td>
-                                                <td id="total_loyer" class="fr-text--lg">
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-
-                                {% include "common/display_field_if_exists.html" with label="loyer dérogatoire" value=lot.loyer_derogatoire object_field="lot__loyer_derogatoire__"|add:lot_uuid %}
-                                {% include "common/display_field_if_exists.html" with label="Nombre de logements à louer en plus à des ménages dont les ressources n'excèdent pas le plafond" value=lot.lgts_mixite_sociale_negocies object_field="lot__lgts_mixite_sociale_negocies__"|add:lot_uuid %}
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-12 fr-col-lg-12">
-                        <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body fr-my-2w">
-                                <div class="block--row-strech" id="{{object_field}}_div">
-                                    <div class="block--row-strech-1">
-                                        <h4 class="fr-card__title">
-                                            Annexes
-                                        </h4>
-                                    </div>
-                                    {% if convention.display_options.display_progress_bar_1 %}
-                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:annexes' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                        </a>
-                                    {% endif %}
-                                </div>
-                                <div class="fr-table fr-table--bordered table--layout-fixed table--limited-height">
-                                    <table>
-                                        <thead>
-                                            <tr>
-                                                {% if convention.display_options.display_comments %}
-                                                    {% include 'common/utils/comments_header.html' with object_name='annexe' label="Annexes" callback_click="refresh_opened_comments" %}
-                                                {% endif %}
-                                                <th scope="col" class="col__width--150">Type d'annexe {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--200">Désignation des logements {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--150">Typologie des logements {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--120">Surface de l'annexe {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--120">Loyer unitaire en € {% include "common/form/required_field_star.html" %}</th>
-                                                <th scope="col" class="col__width--120">Loyer maximum du logement en € {% include "common/form/required_field_star.html" %}</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            {% for annexe in annexes %}
-                                                {% with annexe_uuid=annexe.uuid|slugify %}
-                                                    {% with main_object_field="annexe__uuid__"|add:annexe_uuid %}
-                                                        <tr id="{{main_object_field}}_group">
-                                                            {% if convention.display_options.display_comments %}
-                                                                <td id="{{main_object_field}}_div">
-                                                                    {% include 'common/utils/comments_field.html' with object_field=main_object_field label="Annexe" callback_click="refresh_opened_comments" %}
-                                                                </td>
-                                                            {% endif %}
-                                                            <td>
-                                                                {{ annexe.get_typologie_display }}
-                                                            </td>
-                                                            <td>
-                                                                {{ annexe.logement.designation }}
-                                                            </td>
-                                                            <td>
-                                                                {{ annexe.logement.get_typologie_display }}
-                                                            </td>
-                                                            <td>
-                                                                {{ annexe.surface_hors_surface_retenue|floatformat:2 }}
-                                                            </td>
-                                                            <td>
-                                                                {{ annexe.loyer_par_metre_carre|floatformat:2 }}
-                                                            </td>
-                                                            <td>
-                                                                {{ annexe.loyer|floatformat:2 }}
-                                                            </td>
-                                                        </tr>
-                                                    {% endwith %}
-                                                {% endwith %}
-                                            {% endfor %}
-                                        </tbody>
-                                    </table>
-                                </div>
-                                <div class="fr-grid-row fr-grid-row--gutters">
-                                    <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-
-                                        {% include "common/display_checkbox.html" with value=lot.annexe_caves label="Caves" object_field="lot__annexe_caves__"|add:lot_uuid %}
-                                        {% include "common/display_checkbox.html" with value=lot.annexe_soussols label="Sous-sols" object_field="lot__annexe_soussols__"|add:lot_uuid %}
-                                        {% include "common/display_checkbox.html" with value=lot.annexe_remises label="Remises" object_field="lot__annexe_remises__"|add:lot_uuid %}
-                                        {% include "common/display_checkbox.html" with value=lot.annexe_ateliers label="Ateliers" object_field="lot__annexe_ateliers__"|add:lot_uuid %}
-                                        {% include "common/display_checkbox.html" with value=lot.annexe_sechoirs label="Séchoirs" object_field="lot__annexe_sechoirs__"|add:lot_uuid %}
-                                        {% include "common/display_checkbox.html" with value=lot.annexe_celliers label="Celliers extérieurs au logement" object_field="lot__annexe_celliers__"|add:lot_uuid %}
-                                    </div>
-                                    <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
-                                        {% include "common/display_checkbox.html" with value=lot.annexe_resserres label="Resserres" object_field="lot__annexe_resserres__"|add:lot_uuid %}
-                                        {% include "common/display_checkbox.html" with value=lot.annexe_combles label="Combles et greniers aménageables" object_field="lot__annexe_combles__"|add:lot_uuid %}
-                                        {% include "common/display_checkbox.html" with value=lot.annexe_balcons label="Balcons" object_field="lot__annexe_balcons__"|add:lot_uuid %}
-                                        {% include "common/display_checkbox.html" with value=lot.annexe_loggias label="Loggias et Vérandas" object_field="lot__annexe_loggias__"|add:lot_uuid %}
-                                        {% include "common/display_checkbox.html" with value=lot.annexe_terrasses label="Terrasses" sublabel="Dans la limite de 9 m2, les parties de terrasses accessibles en étage ou aménagées sur ouvrage enterré ou à moitié enterré" object_field="lot__annexe_terrasses__"|add:lot_uuid %}
-                                    </div>
-                                </div>
-
-
-
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% include "conventions/recapitulatif/logements.html" %}
+                {% include "conventions/recapitulatif/annexes.html" %}
 
                 <div class="fr-grid-row fr-grid-row--gutters">
                     <div class="fr-col-12 fr-col-lg-12">
@@ -670,31 +474,9 @@
                     </div>
                 </div>
 
-                <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-12 fr-col-lg-12">
-                        <div class="fr-card fr-card--no-arrow">
-                            <div class="fr-card__body fr-my-2w">
-                                <div class="block--row-strech" id="{{object_field}}_div">
-                                    <div class="block--row-strech-1">
-                                        <h4 class="fr-card__title">
-                                            Informations à l'attention du service instructeur
-                                        </h4>
-                                    </div>
-                                    {% if convention.display_options.display_progress_bar_1 %}
-                                        <a class="fr-link fr-mb-1w" href="{% url 'conventions:comments' convention_uuid=convention.uuid %}" >
-                                            <span class="fr-fi-edit-line" aria-hidden="true">Aller à cette étape</span>
-                                        </a>
-                                    {% endif %}
-                                </div>
-                                <div class="table--limited-height">
-                                    {% include "common/display_text_and_files_if_exists.html" with text=convention.comments_text file_list=convention.comments_files.values %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% include "conventions/recapitulatif/comments.html" %}
 
-                <turbo-frame id="convention_type1and2_options_block" data-turbo="true">
+                <turbo-frame id="convention_actions" data-turbo="true">
                     {% include "conventions/type1and2_options.html" %}
 
                     <div class="fr-grid-row fr-grid-row--gutters fr-my-5w">
