--- a/templates/common/step_progressbar.html
+++ b/templates/common/step_progressbar.html
@@ -1,4 +1,4 @@
-{% if convention.display_options.display_progress_bar_1 or convention.display_options.display_progress_bar_2 or convention.display_options.display_progress_bar_3  or convention.type_avenant.programme %}
+{% if convention.display_options.display_progress_bar_1 or convention.display_options.display_progress_bar_2 or convention.display_options.display_progress_bar_3 or convention.display_options.display_progress_bar_4 %}
     <div class="fr-container">
         <div class="fr-grid-row fr-grid-row--center">
             <div class="container-progressbar fr-col-12 fr-my-5w">
@@ -22,7 +22,7 @@
                         <li class="{% if convention_form_step > 10 %}active{% endif %} {% if convention_form_step == 10 %}current_step{% endif %} {% if convention_form_step == 9 %}after_step{% endif %}" role="recapitulatif"><div>Récapitulatif</div></li>
                         <li class="{% if convention_form_step > 11 %}active{% endif %} {% if convention_form_step == 11 %}current_step{% endif %} {% if convention_form_step == 10 %}after_step{% endif %}" role="preview"><div>Prévisualisation</div></li>
                         <li class="{% if convention_form_step > 12 %}active{% endif %} {% if convention_form_step == 12 %}current_step{% endif %} {% if convention_form_step == 11 %}after_step{% endif %}" role="post_action"><div>Actions</div></li>
-                    {% elif convention.type_avenant.programme %}
+                    {% elif convention.display_options.display_progress_bar_4 %}
                         <li class="{% if convention_form_step > 60 %}active{% endif %} {% if convention_form_step == 60 %}current_step{% endif %}" role="avenant_logements"><div>Logements</div></li>
                         <li class="{% if convention_form_step > 70 %}active{% endif %} {% if convention_form_step == 70 %}current_step{% endif %} {% if convention_form_step == 60 %}after_step{% endif %}" role="avenant_annexes"><div>Annexes</div></li>
                         <li class="{% if convention_form_step > 90 %}active{% endif %} {% if convention_form_step == 90 %}current_step{% endif %} {% if convention_form_step == 70 %}after_step{% endif %}" role="avenant_comments"><div>Commentaires</div></li>
